--- a/src/main/resources/p-nine-report.html
+++ b/src/main/resources/p-nine-report.html
@@ -169,7 +169,7 @@
             </tr>
             <tr style="height: 17pt;">
                 <td rowspan="2"></td>
-                <td rowspan="2"><p class="small-text">A</p></td>
+                <td rowspan="2" class="small-text">A</td>
                 <td rowspan="2"><p class="small-text">B</p></td>
                 <td rowspan="2"><p class="small-text">C</p></td>
                 <td rowspan="2"><p class="small-text">D</p></td>
